--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+//        maven{
+//            url 'file:///Users/lijiacheng/Documents/AndroidProject/Maven/'
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
+//        classpath 'com.as-gradle.demo:gradleplugin:1.0.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
