--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.application'
+apply from: '../aspectj/aspectj-configure-app.gradle'
+//apply from: '../config.gradle'
 //apply plugin: 'com.ljc.apkdist'
 
 android {
-    compileSdkVersion 28
+    def android = rootProject.ext.android
+
+    compileSdkVersion android.compileSdkVersion
+    buildToolsVersion android.buildToolsVersion
     defaultConfig {
-        applicationId "com.ljc.demo"
-        minSdkVersion 26
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        applicationId android.applicationId
+        minSdkVersion android.minSdkVersion
+        targetSdkVersion android.targetSdkVersion
+        versionCode android.versionCode
+        versionName android.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -18,10 +23,9 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion = '28.0.3'
 }
 
 //apkdistconf {
@@ -32,15 +36,15 @@ android {
 //}
 
 dependencies {
+    def dependencies = rootProject.ext.dependencies
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation dependencies.design
+    implementation dependencies.glide
+    annotationProcessor dependencies.glideCompiler
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+    debugImplementation dependencies.leakcanaryAndroid
+    releaseImplementation dependencies.leakcanaryAndroidNoOp
+    debugImplementation dependencies.leakcanarySupportFragment
 
-    implementation project(path: ':broadcast')
+    api project(path: ':lib_base')
 }
