--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-//        maven{
-//            url 'file:///Users/lijiacheng/Documents/AndroidProject/Maven/'
-//        }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
 //        classpath 'com.as-gradle.demo:gradleplugin:1.0.0'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
+        classpath 'org.aspectj:aspectjtools:1.8.13'
+        classpath 'org.aspectj:aspectjweaver:1.8.13'
     }
 }
 
@@ -21,10 +19,47 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    android = [
+            compileSdkVersion: 28,
+            buildToolsVersion: "28.0.3",
+            minSdkVersion    : 21,
+            targetSdkVersion : 28,
+            versionCode      : 1,
+            versionName      : "1.0.0",
+            applicationId    : "com.ljc.demo",
+    ]
+
+    version = [
+            androidSupportSdkVersion: "28.0.0",
+            glideSdkVersion         : "4.9.0",
+            leakcanarySdkVersion    : "1.6.3",
+            aspectjVersion          : "1.8.13",
+    ]
+
+    dependencies = [
+            //support
+            "appcompatV7"              : "com.android.support:appcompat-v7:${version["androidSupportSdkVersion"]}",
+            "design"                   : "com.android.support:design:${version["androidSupportSdkVersion"]}",
+
+            //image
+            "glide"                    : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
+            "glideCompiler"            : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
+
+            //memony
+            "leakcanaryAndroid"        : "com.squareup.leakcanary:leakcanary-android:${version["leakcanarySdkVersion"]}",
+            "leakcanaryAndroidNoOp"    : "com.squareup.leakcanary:leakcanary-android-no-op:${version["leakcanarySdkVersion"]}",
+            "leakcanarySupportFragment": "com.squareup.leakcanary:leakcanary-support-fragment:${version["leakcanarySdkVersion"]}",
+
+            //aop
+            "aspectj"                  : "org.aspectj:aspectjrt:${version["aspectjVersion"]}"
+    ]
 }
